Changing responsive outcome and adding first content

--- a/index.htm
+++ b/index.htm
@@ -33,7 +33,7 @@
     <title>New York</title>
   </head>
   <body>
-    <div class="hero">
+    <div class="hero" id="up">
       <p class="d-none d-lg-block">Our trip to the concrete jungle called</p>
       <h1 class="mb-5">New York</h1>
       <h2 class="mt-5">
@@ -45,45 +45,68 @@
           |
         </span>
         <a href="#thursday"> Thursday</a> | <a href="#friday"> Friday</a> |
-        <a href="#saturday-2"> Satrday</a> | <a href="#sunday-2"> Sunday</a> |
+        <a href="#saturday-2"> Saturday</a> | <a href="#sunday-2"> Sunday</a> |
         <a href="#monday-2"> Monday </a> |
       </h2>
     </div>
     <div class="container container-day" id="saturday">
       <div class="row">
-        <div class="col-5">
+        <div class="col-md-5 col-3">
           <img src="/images/ESB.jpg" class="day-img float-end" />
         </div>
-        <div class="col-7">
-          <h2 class="days float-start">Saterday</h2>
+        <div class="col-3">
+          <h2 class="days float-start">Saturday</h2>
         </div>
-      </div>
-    </div>
-    <div class="container container-day" id="sunday">
-      <div class="row">
-        <div class="col-5">
-          <img
-            src="/images/ESB.jpg"
-            class="day-img float-end"
-            alt="Empire state building"
-            title="Empire state building"
-          />
-        </div>
-        <div class="col-7">
-          <h2 class="days float-start">Sunday</h2>
+        <div class="col-md-4 col-5">
+          <h4 class="date float-end">June 4th</h4>
         </div>
       </div>
     </div>
     <div class="container container-content">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-5">
           <img src="" class="map-img" />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-7">
+          <p class="day-content">
+            Op zaterdag kunnen we vanaf 15.00uur inchecken bij Hotel Ramada by
+            Wyndham. Hier kunnen we komen door de trein te nemen naar Schiphol
+            en dan nog 20minuten met bus 195 naar bushalte Badhoevedorp Oost.
+            Vanaf hier is het nog 5minuten lopen naar het hotel. Het hotel heeft
+            de volgende ochtend voor €5,- per persoon een shuttlebus, de eerste
+            bus vertrekt om 6.00uur. We kunnen bij de receptie overleggen of we
+            dit willen of dat we toch liever eerder al met een taxi die kant op
+            gaan. Wat we moeten regelen op deze zaterdag is een corona test, dat
+            kunnen we hier in Zwolle doen voor we weg gaan, maar we zouden ook
+            kunnen kijken of er in de buurt van het hotel iets te vinden.
+          </p>
+          <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
+        </div>
+      </div>
+    </div>
+    <div class="container container-day" id="sunday">
+      <div class="row">
+        <div class="col-md-5 col-3">
+          <img src="/images/ESB.jpg" class="day-img float-end" />
+        </div>
+        <div class="col-3">
+          <h2 class="days float-start">Sunday</h2>
+        </div>
+        <div class="col-md-4 col-5">
+          <h4 class="date float-end">June 5th</h4>
+        </div>
+      </div>
+    </div>
+    <div class="container container-content">
+      <div class="row">
+        <div class="col-md-5">
+          <img src="" class="map-img" />
+        </div>
+        <div class="col-md-7">
           <p class="day-content">
             Op zondag hebben we vlucht UA71 naar New York/Newark. De vlucht
-            vertrekt om 9.00 a.m vanaf Schiphol. Dit is een aanpassing, hij zou
-            namelijk om 9.15 a.m. vertrekken. Voorheen is was het advies om 2uur
+            vertrekt om 9.00uur vanaf Schiphol. Dit is een aanpassing, hij zou
+            namelijk om 9.15uur. vertrekken. Voorheen is was het advies om 2uur
             voor vertrek aanwezig te zijn, in verband met de drukte op Schiphol
             is dat advies nu naar 3uur verzet. De stoelen die we hebben zijn
             stoel 57K en 57L. We mogen ruim bagage inleveren met een maximum
@@ -92,87 +115,226 @@
             een kleine tas die onder de stoel voor je past en een koffertje of
             rugzak met maximale afmeting 56x35x23 cm en mag niet meer dan 10kilo
             wegen.
+            <br />
+            We zouden rond 11.00uur lokale tijd aan moeten komen op Newark
+            International Airport. Deze luchthaven heeft 3 verschillende
+            terminals, A, B, en C. Als het goed is komen wij op terminal B aan.
+            Vanaf hier kunnen we met de AirTrain naar Newark Airport
+            trainstation en dan pakken we de trein naar Penn's station in New
+            York. Vanaf hier is het nog 10min lopen naar het hotel. Deze
+            treinreis zou ongeveer een uurtje in beslag moeten nemen.
+            <br />
+            We hebben onze overnachtingen bij Doubletree By Hilton New York
+            Times Square West. De reservering staat tot en met 14 juni, maar wij
+            zijn de 13e al weg. Misschien kunnen we de nacht minder betalen of
+            iets realiseren als korting op cocktails, dit moeten we maar even
+            navragen bij de receptie. We kunnen officieel pas vanaf 15.00uur
+            inchecken en waarschijnlijk zijn wij er rond 13.00uur al. Dus dan
+            kunnen we onze spullen achter laten en dan een rondje lopen door de
+            buurt en misschien een plekje zoeken voor wat eten. Tevens kunnen we
+            ook rondlopen om te kijken naar een kleine supermarkt in de buurt
+            van het hotel en we kunnen rondsnuffelen naar leuke ontbijtplekjes.
           </p>
+          <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
     </div>
     <div class="container container-day" id="monday">
       <div class="row">
-        <div class="col-5">
+        <div class="col-md-5 col-3">
           <img src="/images/ESB.jpg" class="day-img float-end" />
         </div>
-        <div class="col-7">
+        <div class="col-3">
           <h2 class="days float-start">Monday</h2>
+        </div>
+        <div class="col-md-4 col-5">
+          <h4 class="date float-end">June 6th</h4>
+        </div>
+      </div>
+    </div>
+    <div class="container container-content">
+      <div class="row">
+        <div class="col-md-5">
+          <img src="" class="map-img" />
+        </div>
+        <div class="col-md-7">
+          <p class="day-content">
+            Deze ochtend kunnen we iets uitslapen en bijkomen van de dolle dag
+            ervoor. We hebben om 11.00uur afgesproken in de lobby van het hotel.
+            Hier treffen we Allen Hirsch, onze Big Apple Greeters gids. Hij gaat
+            ons de leuke plekjes van New York laten zien en neemt ons mee naar
+            Gansevoort Market Historic District, naar Little Island, een stukje
+            van the High Line en Chelsea Market.
+          </p>
+          <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
     </div>
     <div class="container container-day" id="tuesday">
       <div class="row">
-        <div class="col-5">
+        <div class="col-md-5 col-3">
           <img src="/images/ESB.jpg" class="day-img float-end" />
         </div>
-        <div class="col-7">
+        <div class="col-3">
           <h2 class="days float-start">Tuesday</h2>
+        </div>
+        <div class="col-md-4 col-5">
+          <h4 class="date float-end">June 7th</h4>
+        </div>
+      </div>
+    </div>
+    <div class="container container-content">
+      <div class="row">
+        <div class="col-md-5">
+          <img src="" class="map-img" />
+        </div>
+        <div class="col-md-7">
+          <p class="day-content"></p>
+          <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
     </div>
     <div class="container container-day" id="wednesday">
       <div class="row">
-        <div class="col-5">
+        <div class="col-md-5 col-3">
           <img src="/images/ESB.jpg" class="day-img float-end" />
         </div>
-        <div class="col-7">
+        <div class="col-3">
           <h2 class="days float-start">Wednesday</h2>
+        </div>
+        <div class="col-md-4 col-5">
+          <h4 class="date float-end">June 8th</h4>
+        </div>
+      </div>
+    </div>
+    <div class="container container-content">
+      <div class="row">
+        <div class="col-md-5">
+          <img src="" class="map-img" />
+        </div>
+        <div class="col-md-7">
+          <p class="day-content"></p>
+          <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
     </div>
     <div class="container container-day" id="thursday">
       <div class="row">
-        <div class="col-5">
+        <div class="col-md-5 col-3">
           <img src="/images/ESB.jpg" class="day-img float-end" />
         </div>
-        <div class="col-7">
+        <div class="col-3">
           <h2 class="days float-start">Thursday</h2>
+        </div>
+        <div class="col-md-4 col-5">
+          <h4 class="date float-end">June 9th</h4>
+        </div>
+      </div>
+    </div>
+    <div class="container container-content">
+      <div class="row">
+        <div class="col-md-5">
+          <img src="" class="map-img" />
+        </div>
+        <div class="col-md-7">
+          <p class="day-content"></p>
+          <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
     </div>
     <div class="container container-day" id="friday">
       <div class="row">
-        <div class="col-5">
+        <div class="col-md-5 col-3">
           <img src="/images/ESB.jpg" class="day-img float-end" />
         </div>
-        <div class="col-7">
+        <div class="col-3">
           <h2 class="days float-start">Friday</h2>
+        </div>
+        <div class="col-md-4 col-5">
+          <h4 class="date float-end">June 10th</h4>
+        </div>
+      </div>
+    </div>
+    <div class="container container-content">
+      <div class="row">
+        <div class="col-md-5">
+          <img src="" class="map-img" />
+        </div>
+        <div class="col-md-7">
+          <p class="day-content"></p>
+          <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
     </div>
     <div class="container container-day" id="saturday-2">
       <div class="row">
-        <div class="col-5">
+        <div class="col-md-5 col-3">
           <img src="/images/ESB.jpg" class="day-img float-end" />
         </div>
-        <div class="col-7">
+        <div class="col-3">
           <h2 class="days float-start">Saturday</h2>
+        </div>
+        <div class="col-md-4 col-5">
+          <h4 class="date float-end">June 11th</h4>
+        </div>
+      </div>
+    </div>
+    <div class="container container-content">
+      <div class="row">
+        <div class="col-md-5">
+          <img src="" class="map-img" />
+        </div>
+        <div class="col-md-7">
+          <p class="day-content"></p>
+          <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
     </div>
     <div class="container container-day" id="sunday-2">
       <div class="row">
-        <div class="col-5">
+        <div class="col-md-5 col-3">
           <img src="/images/ESB.jpg" class="day-img float-end" />
         </div>
-        <div class="col-7">
+        <div class="col-3">
           <h2 class="days float-start">Sunday</h2>
+        </div>
+        <div class="col-md-4 col-5">
+          <h4 class="date float-end">June 12th</h4>
+        </div>
+      </div>
+    </div>
+    <div class="container container-content">
+      <div class="row">
+        <div class="col-md-5">
+          <img src="" class="map-img" />
+        </div>
+        <div class="col-md-7">
+          <p class="day-content"></p>
+          <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
     </div>
     <div class="container container-day" id="monday-2">
       <div class="row">
-        <div class="col-5">
+        <div class="col-md-5 col-3">
           <img src="/images/ESB.jpg" class="day-img float-end" />
         </div>
-        <div class="col-7">
+        <div class="col-3">
           <h2 class="days float-start">Monday</h2>
+        </div>
+        <div class="col-md-4 col-5">
+          <h4 class="date float-end">June 13th</h4>
+        </div>
+      </div>
+    </div>
+    <div class="container container-content">
+      <div class="row">
+        <div class="col-md-5">
+          <img src="" class="map-img" />
+        </div>
+        <div class="col-md-7">
+          <p class="day-content"></p>
+          <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
     </div>
