--- a/index.htm
+++ b/index.htm
@@ -4,21 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Inge is a front-end developer based in the Netherlands. This is her webpage, go get to know her and check out her work"
-    />
+    <meta name="description" content="The itinerary for a trip to New York" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
     <script
       src="https://kit.fontawesome.com/f18b81c7e7.js"
       crossorigin="anonymous"
@@ -165,6 +157,20 @@
             ons de leuke plekjes van New York laten zien en neemt ons mee naar
             Gansevoort Market Historic District, naar Little Island, een stukje
             van the High Line en Chelsea Market.
+            <br />
+            Als we na de tour nog in de Chelsea en West Village buurt zijn
+            kunnen we naar Washington Square park, naar Stonewall National
+            Monument of de Chelsea gallaries bekijken. Let wel, kans zit er in
+            dat een hoop ateliers dicht zijn op maandag. In de West Village en
+            Chelsea regio zitten als het goed is wel ook veel restaurantjes waar
+            we kunnen eten of in de avond nog een cocktail kunnen doen.
+            <br />
+            Mochten we wel sneller uitgekeken zijn kunnen we meer richting het
+            oosten van het eiland. Hier kunnen we naar Union Square en Union
+            Square Greenmarket, de Flatiron Building, Madison Square Park en de
+            Metropolitan Life Tower. Hier tegenover zit Eataly een Italiaanse
+            geïnspireerde foodhall. Daarna nog een cocktailtje om onze eerste
+            lange dag mee af te sluiten.
           </p>
           <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
@@ -189,7 +195,24 @@
           <img src="" class="map-img" />
         </div>
         <div class="col-md-7">
-          <p class="day-content"></p>
+          <p class="day-content">
+            Vandaag kunnen we beginnen bij Metropolitan Museum of Art, the MET.
+            Als we vroeg aankomen zal het er nog wel redelijk rustig zijn. Het
+            is wel een veel te groot museum om in een ochtend te bewonderen. Dus
+            even goed selecteren wat we willen zien. We kunnen bijvoorbeeld
+            starten bij Europian Paintings, er hangt wel wat tussen van
+            Nederlandse bodem namelijk. Daarna de Modern & Contemporary Art waar
+            de wat recentere namen hangen. Vervolgens even een pauze bij de Roof
+            Garden. En op weg naar buiten kunnen we kijken naar de American
+            Wing.
+            <br />
+            Eenmaal buiten kunnen we kijken of we fietsen kunnen huren en een
+            rondje door Central Park kunnen fietsen. Vervolgens niet te laat
+            weer terug naar het hotel, even opfrissen en iets makkelijks doen
+            met eten. Want vanavond hebben we om 19.00 uur de musical van
+            Aladdin gepland staan in The New Amsterdam Theatre. En hierom is dit
+            hele idee natuurlijk wel ontstaan.
+          </p>
           <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
@@ -213,7 +236,15 @@
           <img src="" class="map-img" />
         </div>
         <div class="col-md-7">
-          <p class="day-content"></p>
+          <p class="day-content">
+            Laten we vandaag het boottochtje naar Liberty Island en Ellis Island
+            maken. Vroeg van start wel want dit is ook z'n lekker druk dingetje.
+            Alles bij elkaar verwachten ze ook dat je ongeveer 6 uur op pad bent
+            dus daar moeten we dan ook maar de tijd voor rekenen. Hier na zouden
+            we langs Trinity Curch en de Brooklyn Bridge kunnen gaan.
+            <br />
+            In de avond nog langs de ONE Vanderbuilt Experience.
+          </p>
           <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
@@ -237,7 +268,16 @@
           <img src="" class="map-img" />
         </div>
         <div class="col-md-7">
-          <p class="day-content"></p>
+          <p class="day-content">
+            Vandaag is een dag om te starten met iets dat ongetwijfeld heel erg
+            indrukwekkend zal zijn. 9/11. We kunnen hierbij een rondleiding
+            krijgen over Ground Zero, naar het Memorial Museum en naar de ONE
+            World Observartory. De rondleiding duurt ongeveer 90minuten, met het
+            museum en de toren zal het wel een volle ochtend in beslag nemen.
+            <br />
+            Vervolgens kunnen we richting Chinatown voor een hele andere cultuur
+            en een goede Chineese lunch en SoHo om wellicht wat te shoppen.
+          </p>
           <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
@@ -261,7 +301,17 @@
           <img src="" class="map-img" />
         </div>
         <div class="col-md-7">
-          <p class="day-content"></p>
+          <p class="day-content">
+            En dan nu echt de hoogte in. In een kleine 15minuten het hele eiland
+            zien kan namelijk met de helikopter. Hier moeten we ook even tijd
+            voor plannen, reistijd heen en terug en 1 uur van te voren aanwezig
+            zijn.
+            <br />
+            In de middag kunnen we de Empire State Building op, rondlopen over
+            Times Square en wellicht iets doen waar we eerder deze dagen toch
+            geen of niet genoeg tijd voor hebben gehad. De Union Square District
+            of Central Park bijvoorbeeld.
+          </p>
           <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
@@ -285,7 +335,10 @@
           <img src="" class="map-img" />
         </div>
         <div class="col-md-7">
-          <p class="day-content"></p>
+          <p class="day-content">
+            Vandaag even een dagje rustig aan doen, uitslapen, bijkomen en om
+            14.00uur naar de musical The Lion King in het Minskoff Theatre.
+          </p>
           <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
@@ -309,7 +362,16 @@
           <img src="" class="map-img" />
         </div>
         <div class="col-md-7">
-          <p class="day-content"></p>
+          <p class="day-content">
+            Wellicht kunnen we de dag vandaag beginnen met nog een adrenaline
+            kick waarbij Julia lekker gaat chillen en rondscharrelen op het deck
+            van Edge en ik de City Climb doe.
+            <br />
+            Na deze ochtend kunnen we de East River over, richting Williamsburg
+            in Brooklyn en hier rondlopen. In Brooklyn hebben ze een groot park,
+            een begraafplaats die schijnbaar wat tijd waard is en leuke
+            winkeltjes en eettentjes.
+          </p>
           <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
@@ -333,7 +395,15 @@
           <img src="" class="map-img" />
         </div>
         <div class="col-md-7">
-          <p class="day-content"></p>
+          <p class="day-content">
+            Laatste dagje alweer! Indien we niet iets hebben kunnen regelen met
+            betrekking tot de extra geboekte nacht hebben we geen uitcheck tijd
+            waar we ons aan moeten houden. We vliegen om 17.50uur weer terug
+            vanaf Newark met vlucht UA70, dus willen zeker om 14.00uur weer met
+            de trein richting het vliegveld. Daarom geen plannen voor vandaag.
+            Misschien rustig aan doen, misschien nog een laatste aankoop en
+            wandeling.
+          </p>
           <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
       </div>
