--- a/index.htm
+++ b/index.htm
@@ -57,7 +57,10 @@
     <div class="container container-content">
       <div class="row">
         <div class="col-md-5">
-          <img src="" class="map-img" />
+          <img
+            src="images/brooklyn-bridge-new-york.webp"
+            class="picture-bigger mt-4"
+          />
         </div>
         <div class="col-md-7">
           <p class="day-content">
@@ -92,7 +95,10 @@
     <div class="container container-content">
       <div class="row">
         <div class="col-md-5">
-          <img src="" class="map-img" />
+          <img
+            src="images/lower-east-side.jpg"
+            class="picture mt-5 float-end me-5"
+          />
         </div>
         <div class="col-md-7">
           <p class="day-content">
@@ -108,7 +114,7 @@
             rugzak met maximale afmeting 56x35x23 cm en mag niet meer dan 10kilo
             wegen.
             <br />
-            We zouden rond 11.00uur lokale tijd aan moeten komen op Newark
+            We zouden rond 11.35uur lokale tijd aan moeten komen op Newark
             International Airport. Deze luchthaven heeft 3 verschillende
             terminals, A, B, en C. Als het goed is komen wij op terminal B aan.
             Vanaf hier kunnen we met de AirTrain naar Newark Airport
@@ -147,7 +153,7 @@
     <div class="container container-content">
       <div class="row">
         <div class="col-md-5">
-          <img src="" class="map-img" />
+          <img src="images/high-line-park.webp" class="picture mt-5 ms-4" />
         </div>
         <div class="col-md-7">
           <p class="day-content">
@@ -192,7 +198,7 @@
     <div class="container container-content">
       <div class="row">
         <div class="col-md-5">
-          <img src="" class="map-img" />
+          <img src="images/bethesda.jpg" class="picture mt-4 float-end me-5" />
         </div>
         <div class="col-md-7">
           <p class="day-content">
@@ -233,7 +239,7 @@
     <div class="container container-content">
       <div class="row">
         <div class="col-md-5">
-          <img src="" class="map-img" />
+          <img src="images/statue-liberty.jpg" class="picture-small ms-5" />
         </div>
         <div class="col-md-7">
           <p class="day-content">
@@ -265,7 +271,7 @@
     <div class="container container-content">
       <div class="row">
         <div class="col-md-5">
-          <img src="" class="map-img" />
+          <img src="images/ground-zero.jpg" class="picture" />
         </div>
         <div class="col-md-7">
           <p class="day-content">
@@ -298,7 +304,7 @@
     <div class="container container-content">
       <div class="row">
         <div class="col-md-5">
-          <img src="" class="map-img" />
+          <img src="images/times-square.jpg" class="picture-small ms-5" />
         </div>
         <div class="col-md-7">
           <p class="day-content">
@@ -332,7 +338,7 @@
     <div class="container container-content">
       <div class="row">
         <div class="col-md-5">
-          <img src="" class="map-img" />
+          <img src="images/the_lion_king.jpg" class="picture-small" />
         </div>
         <div class="col-md-7">
           <p class="day-content">
@@ -359,7 +365,7 @@
     <div class="container container-content">
       <div class="row">
         <div class="col-md-5">
-          <img src="" class="map-img" />
+          <img src="images/brooklyn-bridge.jpg" class="picture ms-5" />
         </div>
         <div class="col-md-7">
           <p class="day-content">
@@ -392,15 +398,15 @@
     <div class="container container-content">
       <div class="row">
         <div class="col-md-5">
-          <img src="" class="map-img" />
+          <img src="images/new-york.webp" class="picture float-end me-5 mt-4" />
         </div>
         <div class="col-md-7">
           <p class="day-content">
             Laatste dagje alweer! Indien we niet iets hebben kunnen regelen met
             betrekking tot de extra geboekte nacht hebben we geen uitcheck tijd
-            waar we ons aan moeten houden. We vliegen om 17.50uur weer terug
-            vanaf Newark met vlucht UA70, dus willen zeker om 14.00uur weer met
-            de trein richting het vliegveld. Daarom geen plannen voor vandaag.
+            waar we ons aan moeten houden. We vliegen om 17.35uur weer terug
+            vanaf Newark met vlucht UA70, dus willen rond 13.30uur weer met de
+            trein richting het vliegveld. Daarom geen plannen voor vandaag.
             Misschien rustig aan doen, misschien nog een laatste aankoop en
             wandeling.
           </p>
@@ -408,5 +414,8 @@
         </div>
       </div>
     </div>
+    <footer class="mt-5 mb-2">
+      <br />
+    </footer>
   </body>
 </html>
