--- a/index.htm
+++ b/index.htm
@@ -249,7 +249,7 @@
             dus daar moeten we dan ook maar de tijd voor rekenen. Hier na zouden
             we langs Trinity Curch en de Brooklyn Bridge kunnen gaan.
             <br />
-            In de avond nog langs de ONE Vanderbuilt Experience.
+            In de avond nog langs Empire State Building.
           </p>
           <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
@@ -313,10 +313,10 @@
             voor plannen, reistijd heen en terug en 1 uur van te voren aanwezig
             zijn.
             <br />
-            In de middag kunnen we de Empire State Building op, rondlopen over
-            Times Square en wellicht iets doen waar we eerder deze dagen toch
-            geen of niet genoeg tijd voor hebben gehad. De Union Square District
-            of Central Park bijvoorbeeld.
+            In de middag kunnen we de ONE Vanderbilt op, rondlopen over Times
+            Square en wellicht iets doen waar we eerder deze dagen toch geen of
+            niet genoeg tijd voor hebben gehad. De Union Square District of
+            Central Park bijvoorbeeld.
           </p>
           <a href="#up" class="btn float-end btn-branding-outline"> Omhoog</a>
         </div>
